quad-wheel, tiny-js, flathead

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -28,6 +28,7 @@ sh: $(IID_DIR)/runtime
 	$(DOCKER_RUN) --rm -it \
 	  -v $(PWD)/../bench:/bench \
 	  -v $(PWD)/../dist/$(DOCKER_ARCH):/dist \
+	  -w /dist \
 	  jsz-runtime
 
 hub:
