New benchmark runner, wip

--- a/bench/.gitignore
+++ b/bench/.gitignore
@@ -5,7 +5,7 @@ crypto.js
 deltablue.js
 earley-boyer.js
 gbemu.js
-mandreel-plus.js
+mandreel-gbemu-codeload.js
 mandreel.js
 navier-stokes.js
 octane-git/
