--- a/bench/Makefile
+++ b/bench/Makefile
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2025 Ivan Krasilnikov
+# SPDX-License-Identifier: MIT
+
 OCTANE_PARTS := \
    richards.js \
    deltablue.js \
