--- a/features/results/Makefile
+++ b/features/results/Makefile
@@ -1,7 +1,7 @@
-all: run table
+all: run table.md
 
 run:
 	time run-all.sh
 
-README.md table: *.txt
-	./table.sh
+README.md table.md: *.txt
+	./table.py
