conformance/run.sh improvements

--- a/conformance/results/Makefile
+++ b/conformance/results/Makefile
@@ -1,20 +1,9 @@
 all: run table
 
-run:
-	time run-all.sh
+run: .PHONY
+	./run-all.sh
 
-BINARIES = $(shell run-all.sh --print)
-
-run-parallel: $(patsubst %,%.txt,$(BINARIES))
-
-define rules
-$(1).txt: .PHONY
-	./run-all.sh --only "$(1)"
-endef
-
-$(foreach var,$(BINARIES),$(eval $(call rules,$(var))))
-
-table:
+table: .PHONY
 	./table.py
 
 .PHONY:
