--- a/conformance/results/Makefile
+++ b/conformance/results/Makefile
@@ -7,12 +7,12 @@ ENGINES := $(shell \
 	  if ! [[ -f "$$bin" && -x "$$bin" && -f "$$bin.json" ]]; then continue; fi; \
 	  name=$$(basename "$$bin"); \
 	  if [[ -x "$${bin}_full" ]]; then continue; fi; \
-	  if [[ "$$name" =~ ^(cesanta-elk|echosoar-jsi) ]]; then continue; fi; \
+	  if [[ "$$name" =~ ^(cesanta-elk) ]]; then continue; fi; \
 	  if [[ "$$name" != "$${name%_*}" && ! "$$name" =~ ^(.*_full|tiny-js|mujs|js-interpreter|spidermonkey_[12]).* ]]; then continue; fi; \
 	  echo "$$name"; \
 	done)
 
-ES5_ENGINES := bali besen espruino yrm006-miniscript
+ES5_ENGINES := bali besen echosoar-jsi espruino yrm006-miniscript
 
 all: $(addsuffix .txt, $(ENGINES)) table
 
