--- a/conformance/results/Makefile
+++ b/conformance/results/Makefile
@@ -7,7 +7,7 @@ ENGINES := $(shell \
 	  if ! [[ -f "$$bin" && -x "$$bin" && -f "$$bin.json" ]]; then continue; fi; \
 	  name=$$(basename "$$bin"); \
 	  if [[ -x "$${bin}_full" ]]; then continue; fi; \
-	  if [[ "$$name" != "$${name%_*}" && ! "$$name" =~ ^(.*_full|tiny-js|mujs|js-interpreter|spidermonkey_[12]).* ]]; then continue; fi; \
+	  if [[ "$$name" != "$${name%_*}" && ! "$$name" =~ ^(.*_full|mujs|js-interpreter|spidermonkey_[12]).* ]]; then continue; fi; \
 	  echo "$$name"; \
 	done)
 
