--- a/conformance/results/Makefile
+++ b/conformance/results/Makefile
@@ -1,9 +1,6 @@
 SHELL := /bin/bash
-DIST_DIR := /dist
-JOBS := 8
-
 ENGINES := $(shell \
-	for bin in $(DIST_DIR)/*; do \
+	for bin in /dist/*; do \
 	  if ! [[ -f "$$bin" && -x "$$bin" && -f "$$bin.json" ]]; then continue; fi; \
 	  name=$$(basename "$$bin"); \
 	  if [[ -x "$${bin}_full" ]]; then continue; fi; \
@@ -11,26 +8,30 @@ ENGINES := $(shell \
 	  echo "$$name"; \
 	done)
 
-ES5 := bali besen cesanta-elk echosoar-jsi espruino ngs yrm006-miniscript
-
 all: $(addsuffix .txt, $(ENGINES)) table
 
 table:
 	./README-gen.py
 
-#node.txt:
-#	../run.sh --next -j $(JOBS) -o node.txt node
+ES5 := bali besen cesanta-elk echosoar-jsi espruino ngs yrm006-miniscript
+MANUAL := topchetoeu
 
 define ENGINE_RULE
-$(1).txt: $(DIST_DIR)/$(1)
-	../run.sh --next -j $(JOBS) -o $$@ $$<
+$(1).txt: /dist/$(1)
+	../run.sh --next -j 8 -o $(1).txt /dist/$(1)
 endef
-$(foreach engine,$(filter-out $(ES5),$(ENGINES)),$(eval $(call ENGINE_RULE,$(engine))))
+$(foreach engine,$(filter-out $(ES5) $(MANUAL),$(ENGINES)),$(eval $(call ENGINE_RULE,$(engine))))
 
 define ES5_RULE
-$(1).txt: $(DIST_DIR)/$(1)
-	../run.sh -j $(JOBS) -o $$@ $$< ../es[1-5]
+$(1).txt: /dist/$(1)
+	../run.sh -j 8 -o $(1).txt /dist/$(1) ../es[1-5]
 endef
 $(foreach engine,$(ES5),$(eval $(call ES5_RULE,$(engine))))
 
 .PHONY: all table
+
+topchetoeu.txt: /dist/topchetoeu
+	../run.sh -j 1 -o topchetoeu.txt /dist/topchetoeu ../es[1-5]
+
+node.txt:
+	../run.sh --next -j 8 -o node.txt node
