--- a/conformance/results/Makefile
+++ b/conformance/results/Makefile
@@ -16,7 +16,7 @@ all: $(addsuffix .txt, $(ENGINES)) table
 table:
 	./README-gen.py
 
-ES5 := bali besen cesanta-elk echosoar-jsi espruino je-perl jispy ngs twostroke yrm006-miniscript
+ES5 := bali besen cesanta-elk echosoar-jsi espruino je-perl jispy ngs rpython-langjs twostroke yrm006-miniscript
 MANUAL := topchetoeu
 
 define ENGINE_RULE
