--- a/docker/Makefile
+++ b/docker/Makefile
@@ -19,8 +19,9 @@ TARGETS := $(sort $(FILE_TARGETS) $(ARGS_TARGETS))
 # dscriptcpp: 32-bit x86 build only
 # iv-lv5: no JIT on arm64 - main build is JIT-less
 # spidermonkey_1.8.5/17/24: doesn't support arm64 due to JIT that can't be compiled out
+# quickjit: x64 only
 ifeq ($(DOCKER_ARCH),arm64)
-  TARGETS := $(filter-out chakracore% dscriptcpp iv-lv5_jitless spidermonkey_1.8.5 spidermonkey_17 spidermonkey_24 bali starlight,$(TARGETS))
+  TARGETS := $(filter-out chakracore% dscriptcpp iv-lv5_jitless quickjit spidermonkey_1.8.5 spidermonkey_17 spidermonkey_24 bali starlight,$(TARGETS))
 endif
 
 all: base $(TARGETS)
