bench: implement comparison mode
This introduces a new benchmarking mode for precise comparison runs
between multiple engines:

$ bench engine1 [engine2 ...] [--] [test.js ...]

Engines are run in parallel on the same set of tests in order to minimize
the effect of systemic noise/bias (throttling, thermal, system load etc)
on the results and allow the use of paired statistical tests for analysis.

Refactored bench/compare script, added support for trimming + yuen test,
colored output, show geometric mean, call it autoamtically at the end
of a benchmark run.

Misc small quality of life improvements in these scripts.

--- a/bench/Makefile
+++ b/bench/Makefile
@@ -1,10 +1,14 @@
 # SPDX-FileCopyrightText: 2025 Ivan Krasilnikov
 # SPDX-License-Identifier: MIT
 
-all: gen
+all: lint gen
 
 gen:
 	./gen-octane.sh
 
 clean:
 	./gen-octane.sh --clean
+
+lint:
+	mypy bench
+	mypy --ignore-missing-imports compare
