mujs: build with clang by default
Slightly faster and less flaky on some regex tests.

--- a/conformance/results/Makefile
+++ b/conformance/results/Makefile
@@ -10,15 +10,15 @@ ENGINES := $(shell \
 	  if ! [[ -f "$$bin" && -x "$$bin" && -f "$$bin.json" ]]; then continue; fi; \
 	  name=$$(basename "$$bin"); \
 	  if [[ -x "$${bin}_full" || -x "$${bin}_intl" ]]; then continue; fi; \
-	  if [[ "$$name" != "$${name%_*}" && ! "$$name" =~ ^(.*_full|.*_intl|mujs|js-interpreter|spidermonkey_[12]).* ]]; then continue; fi; \
+	  if [[ "$$name" != "$${name%_*}" && ! "$$name" =~ ^(.*_full|.*_intl|js-interpreter|spidermonkey_[12]).* ]]; then continue; fi; \
 	  echo "$$name"; \
 	done)
 
-MANUAL := topchetoeu
+MANUAL := topchetoeu mujs_babel
 ES5 := bali besen cesanta-elk echosoar-jsi espruino je-perl jispy ngs rpython-langjs twostroke yrm006-miniscript
 ESNEXT := $(filter-out $(ES5) $(MANUAL),$(ENGINES))
 
-all: $(addsuffix .txt, $(ENGINES)) table
+all: $(addsuffix .txt, $(ENGINES) $(MANUAL)) README.md
 
 $(ESNEXT:%=%.txt): %.txt: /dist/%
 	../run.sh --next -j 8 -o $@ $<
@@ -26,11 +26,11 @@ $(ESNEXT:%=%.txt): %.txt: /dist/%
 $(ES5:%=%.txt): %.txt: /dist/%
 	../run.sh -j 8 -o $@ $< ../es[1-5]
 
-topchetoeu.txt: /dist/topchetoeu
+topchetoeu.txt:
 	../run.sh -j 1 -o topchetoeu.txt /dist/topchetoeu ../es[1-5]
 
-node.txt:
-	../run.sh --next -j 8 -o node.txt node
+mujs_babel.txt: /dist/mujs /dist/mujs_babel
+	../run.sh --next -j 8 -o mujs_babel.txt /dist/mujs_babel
 
 duktape_babel.txt: /dist/duktape /dist/mujs_babel
 	../run.sh --next -j 8 -o duktape_babel.txt /dist/mujs_babel /dist/duktape
@@ -38,7 +38,10 @@ duktape_babel.txt: /dist/duktape /dist/mujs_babel
 iv-lv5_babel.txt: /dist/iv-lv5 /dist/mujs_babel
 	../run.sh --next -j 8 -o iv-lv5_babel.txt /dist/mujs_babel /dist/iv-lv5
 
-table:
+node.txt:
+	../run.sh --next -j 8 -o node.txt node
+
+README.md:
 	./README-gen.py
 
-.PHONY: all table
+.PHONY: all README.md
