Refactor base containers build rule

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -11,8 +11,14 @@ DOCKER_RUN   := $(DOCKER) run --platform linux/$(DOCKER_ARCH)
 IID_DIR  := ../.cache/iid
 DIST_DIR := ../dist/$(DOCKER_ARCH)
 
-FILE_TARGETS := $(filter-out jsz-% hub, $(patsubst %.Dockerfile,%,$(wildcard [a-z0-9]*.Dockerfile)))
+FILE_TARGETS := $(patsubst %.Dockerfile,%,$(wildcard [a-z0-9]*.Dockerfile))
 ARGS_TARGETS := $(shell cat args.txt | egrep -o '^[-a-z0-9_.]+' | sort -u)
+ALL_TARGETS := $(sort $(FILE_TARGETS) $(ARGS_TARGETS))
+# jsz-* targets are base containers with build and runtime environments.
+# hub has a special make rule.
+# Everything else should be an engine target
+BASE_TARGETS := $(filter jsz-%,$(ALL_TARGETS))
+ENGINE_TARGETS := $(filter-out jsz-% hub,$(ALL_TARGETS))
 
 # bali: arm64 build broken
 # dscriptcpp: hacky non-portable code, 32-bit x86 only
@@ -34,21 +40,20 @@ AMD64_ONLY_TARGETS := \
 # hako: revamped repo, build scripts needs to be rewritten
 DISABLED_TARGETS = hako%
 
-TARGETS := $(sort $(FILE_TARGETS) $(ARGS_TARGETS))
-TARGETS := $(filter-out $(DISABLED_TARGETS),$(TARGETS))
+ENGINE_TARGETS := $(filter-out $(DISABLED_TARGETS),$(ENGINE_TARGETS))
 ifeq ($(DOCKER_ARCH),arm64)
-  TARGETS := $(filter-out $(AMD64_ONLY_TARGETS),$(TARGETS))
+  ENGINE_TARGETS := $(filter-out $(AMD64_ONLY_TARGETS),$(ENGINE_TARGETS))
 endif
 
-all: base $(TARGETS)
+all: base $(ENGINE_TARGETS)
 
 all-ignoring-errors: base
-	-for target in $(TARGETS); do make "$$target"; done
+	-for target in $(ENGINE_TARGETS); do make "$$target"; done
 
-dist: $(patsubst %,$(DIST_DIR)/%.json,$(TARGETS))
+dist: $(patsubst %,$(DIST_DIR)/%.json,$(ENGINE_TARGETS))
 	@true
 
-sh: $(IID_DIR)/runtime
+sh: $(IID_DIR)/jsz-runtime
 	$(DOCKER_RUN) --rm -it \
 	  -v $(PWD)/..:/zoo:rw \
 	  -v $(PWD)/../.git:/zoo/.git:ro \
@@ -61,53 +66,41 @@ sh: $(IID_DIR)/runtime
 hub:
 	./hub.sh
 
-base: $(IID_DIR)/base
+base: $(BASE_TARGETS)
 	@true
 
-$(IID_DIR)/base: jsz-*.Dockerfile $(IID_DIR)/runtime
-	@mkdir -p $(IID_DIR)
-	$(DOCKER_BUILD) -t jsz-debian -t jsz-debian13 -f jsz-debian.Dockerfile .
-	$(DOCKER_BUILD) -t jsz-debian11 -f jsz-debian.Dockerfile --build-arg BASE=debian:bullseye .
-	$(DOCKER_BUILD) -t jsz-gcc14 -f jsz-gcc.Dockerfile --build-arg=VER=14 .
-	$(DOCKER_BUILD) -t jsz-gcc15 -f jsz-gcc.Dockerfile --build-arg=VER=15 .
-	$(DOCKER_BUILD) -t jsz-gcc16 -f jsz-gcc.Dockerfile --build-arg=VER=16 .
-	$(DOCKER_BUILD) -t jsz-gcc -f jsz-gcc.Dockerfile .
-	$(DOCKER_BUILD) -t jsz-clang19 -f jsz-clang.Dockerfile --build-arg=VER=19 .
-	$(DOCKER_BUILD) -t jsz-clang20 -f jsz-clang.Dockerfile --build-arg=VER=20 .
-	$(DOCKER_BUILD) -t jsz-clang21 -f jsz-clang.Dockerfile --build-arg=VER=21 .
-	$(DOCKER_BUILD) -t jsz-clang22 -f jsz-clang.Dockerfile --build-arg=VER=22 .
-	$(DOCKER_BUILD) -t jsz-clang -f jsz-clang.Dockerfile .
-	$(DOCKER_BUILD) -t jsz-golang -f jsz-golang.Dockerfile .
-	$(DOCKER_BUILD) -t jsz-node -f jsz-node.Dockerfile .
-	$(DOCKER_BUILD) -t jsz-rust -f jsz-rust.Dockerfile .
-	$(DOCKER) image ls --format={{.Id}} jsz-debian >$(IID_DIR)/base
-
-$(IID_DIR)/runtime: jsz-runtime.Dockerfile
-	mkdir -p $(IID_DIR)
-	$(DOCKER_BUILD) --iidfile=$(IID_DIR)/runtime -t jsz-runtime --target=jsz-runtime -f jsz-runtime.Dockerfile .
-
-define rules
-$(1): $(IID_DIR)/$(1) $(DIST_DIR)/$(1).json
-	@true
-
-$(IID_DIR)/$(1): $(IID_DIR)/base $$(shell ./build.sh --dep $(1)) build.sh
+define base_rules
+$(IID_DIR)/$(1): $$(shell ./build.sh --dep $(1)) build.sh
 	./build.sh $(1)
+
+$(1): $(IID_DIR)/$(1)
+	@true
+endef
+
+$(foreach var,$(BASE_TARGETS),$(eval $(call base_rules,$(var))))
+
+define engine_rules
+$(IID_DIR)/jsz-$(1): $$(shell ./build.sh --dep $(1)) build.sh
+	./build.sh $(1)
+
+$(1): $(IID_DIR)/jsz-$(1) $(DIST_DIR)/$(1).json
+	@true
 
 $(1)-dist: $(DIST_DIR)/$(1).json
 	@true
 
-$(DIST_DIR)/$(1).json: $(IID_DIR)/$(1) dist.sh
+$(DIST_DIR)/$(1).json: $(IID_DIR)/jsz-$(1) dist.sh
 	./dist.sh $(1)
 
-$(1)-repl: $(IID_DIR)/$(1)
+$(1)-repl: $(IID_DIR)/jsz-$(1)
 	$(DOCKER_RUN) --rm -it -v $(PWD)/../bench:/bench jsz-$(1)
 
-$(1)-sh: $(IID_DIR)/$(1)
+$(1)-sh: $(IID_DIR)/jsz-$(1)
 	$(DOCKER_RUN) --rm -it -v $(PWD)/../bench:/bench jsz-$(1) \
 	  /bin/bash -c '[[ -f $$$$JS_BINARY && ! -f $(1) ]] && ln -sv "$$$$JS_BINARY" "./$(1)"; /bin/bash -i'
 endef
 
-$(foreach var,$(TARGETS),$(eval $(call rules,$(var))))
+$(foreach var,$(ENGINE_TARGETS),$(eval $(call engine_rules,$(var))))
 
 # Also consider 'podman system reset' to delete whole podman storage
 # for the current user, if things get messed badly.
