hako: fix build, add C# and Go runners
Main Go runner based on upstream's go branch using wazero runtime,
and an extra hako_wasmtime_go runner using wasmtime-go runtime.

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -38,8 +38,7 @@ AMD64_ONLY_TARGETS := \
   spidermonkey_24 \
   starlight
 
-# hako: revamped repo, build scripts needs to be rewritten
-DISABLED_TARGETS = hako%
+DISABLED_TARGETS :=
 
 ENGINE_TARGETS := $(filter-out $(DISABLED_TARGETS),$(ENGINE_TARGETS))
 ifeq ($(DOCKER_ARCH),arm64)
